<resources>
    <!-- xml -->
    <string name="app_name">EKaxin</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="login_username_hint">用户名/账号</string>
    <string name="login_password_hint">密码</string>
    <string name="login_register_verification">下一步</string>
    <string name="login_verification_next">下一步</string>
    <string name="login_setpassword_ok">完成</string>
    <string name="login_setpassword_one">设置6-16位的密码</string>
    <string name="login_setpassword_tow">确认密码</string>
    <string name="login_setpassword_formerpassword">原先密码</string>
    
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="message_search_hint">搜索&#8230;</string>
    
    <string name="main_tab_homepage">个人主页</string>
    <string name="main_tab_homepage_personagespace">个人空间</string>
    <string name="main_tab_homepage_notes">记事本</string>
    <string name="main_tab_homepage_record">个人档案</string>
    
    <string name="homepage_notepad_bar_title">标题</string>
    <string name="homepage_notepad_bar_grouping">分组</string>
    <string name="homepage_notepad_bar_time">创建时间</string>
    
    <string name="main_tab_cards">卡信集</string>
    <string name="main_tab_exchange">一键交换</string>
    <string name="mian_tab_statistics">统计</string>
    <string name="mian_tab_user">设置</string>
    <string name="mian_tab_home">主页</string>
    
    <string name="add_avator">头像</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="new_friends">新朋友</string>
    <string name="near_people">附近的人</string>
    <string name="space">空间</string>
    <string name="notepad">便签</string>
    <string name="space_listview_footer_hint_normal">加载更多</string>
    <string name="space_listview_footer_hint_ready">松开载入更多</string>
    
    <string name="timeaxis_listview_header_hint_normal">下拉刷新</string>
    <string name="timeaxis_listview_footer_hint_ready">松开载入更多</string>
    <string name="timeaxis_listview_header_last_time">上次更新时间：</string>
    <string name="timeaxis_listview_header_hint_loading">正在加载...</string>
    <string name="timeaxis_listview_footer_hint_normal">查看更多</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
    
    
    <!-- 代码 -->
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="login_error_account_null">账号不能为空</string>
    <string name="login_error_password_null">密码不能为空</string>
    <string name="register_error_account_null">手机不能为空</string>
    <string name="register_error_account_nophone">请输入正确的手机号码</string>
    <string name="verification_error_null">验证码不能为空</string>
    <string name="verification_error">验证码错误</string>
    <string name="setpassword_frist_null">密码不为空</string>
    <string name="setpassword_second_null">请输入确认密码</string>
    <string name="setpassword_import_error">输入密码不一致</string>
    <string name="setpassword_lessthan_six">密码不能小于六位</string>
    
    <string name="add_nick">昵称</string>
    <string name="add_cards">卡信号</string>
    <string name="add_two_dimension">二维码</string>
    <string name="add_sex">性别</string>
    <string name="add_signature">个性签名</string>
    <string name="add_safety">账号安全</string>
    <string name="add_set">个性设置</string>
    
    <string name="edie_card_chinese">中文名</string>
    <string name="edie_card_english">英文名</string>
    <string name="edie_card_phone">手机</string>
    <string name="edie_card_qq">QQ</string>
    <string name="edie_card_weixin">微信</string>
    <string name="edie_card_message">邮箱</string>
    <string name="edie_card_location">公司</string>
    <string name="edie_card_department">部门</string>
    <string name="edie_card_gongsi">职务</string>
    <string name="edie_card_call">办公电话</string>
    <string name="edie_card_chuanzhen">传真</string>
    
    <string name="space_discover">发现</string>
    <string name="space_oneself">自己</string>
    
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    
</resources>
