<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/main_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_cards"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_new_bar"
                android:drawableTop="@drawable/tab_btn_cards"
                android:onClick="onTabSelect"
                android:paddingBottom="2dp"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_cards"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_exchange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_new_bar"
                android:drawableTop="@drawable/tab_btn_exchange"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_exchange"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" >


            <Button
                android:id="@+id/btn_main_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_new_bar"
                android:drawableTop="@drawable/tab_btn_home"
                android:onClick="onTabSelect" 
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/mian_tab_home"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_statistics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_new_bar"
                android:drawableTop="@drawable/tab_btn_statistics"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/mian_tab_statistics"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_main_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_main_new_bar"
                android:drawableTop="@drawable/tab_btn_user"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/mian_tab_user"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>