<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar"/>
     
    <LinearLayout
        android:id="@+id/layout_notepad_top"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_notepad_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_action_home_broage"
                android:onClick="onTabSelect"
                android:paddingBottom="2dp"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/homepage_notepad_bar_title"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_notepad_notepad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_action_home_broage"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/homepage_notepad_bar_grouping"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_notepad_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_action_home_broage"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/homepage_notepad_bar_time"
                android:textColor="@drawable/tab_text_color"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>
     
    
    
    <ListView
        android:id="@+id/notes_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@null"/>

</LinearLayout>
