<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color"  >
    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />
    
    <LinearLayout
        android:id="@+id/Layout_setpassword_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" 
        android:layout_below="@+id/common_actionbar">

        <RelativeLayout
            android:id="@+id/Layout_amendpassword_formerpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_init_height"
            android:background="@color/login_edit_background" >

            <View
                android:id="@+id/view_amendpassword_formerpassword_focus"
                android:layout_width="4px"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_select" />

            <EditText
                android:id="@+id/et_amendpassword_formerpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/view_amendpassword_formerpassword_focus"
                android:background="@null"
                android:ems="9"
                android:hint="@string/login_setpassword_formerpassword"
                android:textColor="#A8A8A8"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>



        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Layout_amendpassword_presentpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_init_height"
            android:layout_marginTop="20dp"
            android:background="@color/login_edit_background" >

            <View
                android:id="@+id/view_amendpassword_presentpassword_focus"
                android:layout_width="4px"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_amendpassword_presentpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/view_amendpassword_presentpassword_focus"
                android:background="@null"
                android:ems="9"
                android:hint="@string/login_setpassword_one"
                android:textColor="#A8A8A8"
                android:textSize="16sp"
                android:layout_marginLeft="5dp" >
            </EditText>
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/Layout_amendpassword_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_init_height"
            android:layout_marginTop="20dp"
            android:background="@color/login_edit_background" >

            <View
                android:id="@+id/view_amendpassword_confirmpassword_focus"
                android:layout_width="4px"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_setpassword_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/view_amendpassword_confirmpassword_focus"
                android:background="@null"
                android:ems="9"
                android:hint="@string/login_setpassword_tow"
                android:textColor="#A8A8A8"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>



        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
