<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_color" >

    <include
        android:id="@+id/common_actionbar"
        layout="@layout/include_action_bar" />

    <LinearLayout
        android:id="@+id/Layout_setpassword_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical" 
        android:layout_below="@+id/common_actionbar">

        <RelativeLayout
            android:id="@+id/Layout_setpassword_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_init_height"
            android:background="@color/login_edit_background" >

            <View
                android:id="@+id/view_setpassword_focus"
                android:layout_width="4px"
                android:layout_height="wrap_content"
                android:background="@drawable/edt_select" />

            <EditText
                android:id="@+id/et_setpassword_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/Layout_setpassword_background_icon"
                android:layout_toRightOf="@+id/view_setpassword_focus"
                android:background="@null"
                android:ems="9"
                android:hint="@string/login_setpassword_one"
                android:textColor="#A8A8A8"
                android:textSize="16sp"
                android:layout_marginLeft="5dp" >

                <requestFocus />
            </EditText>

            <RelativeLayout
                android:id="@+id/Layout_setpassword_background_icon"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_init_height"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@color/login_edit_icon_background" >

                <ImageView
                    android:id="@+id/imgbut_setpassword_icon"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:layout_marginTop="5dp"/>
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/Layout_setpassword_userpassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_init_height"
            android:layout_marginTop="20dp"
            android:background="@color/login_edit_background" >

            <View
                android:id="@+id/view_setpassword_passwordfocus"
                android:layout_width="4px"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_setpassword_passwordok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/view_setpassword_passwordfocus"
                android:background="@null"
                android:ems="9"
                android:hint="@string/login_setpassword_tow"
                android:textColor="#A8A8A8"
                android:textSize="16sp"
                android:layout_marginLeft="5dp" >
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_setpassword_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_alignLeft="@+id/Layout_setpassword_edit"
        android:layout_alignRight="@+id/Layout_setpassword_edit"
        android:layout_below="@+id/Layout_setpassword_edit"
        android:layout_marginTop="38dp"
        android:background="@drawable/btn_login_selector"
        android:text="@string/login_setpassword_ok"
        android:textColor="@color/base_color_text_white"
        android:textSize="@dimen/text_size_large" />

</RelativeLayout>